test/yaml/multinet/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: samplepod
  annotations:
    k8s.v1.cni.cncf.io/networks: network-blue-conf@eth1, network-red-conf@eth6
    cni.projectcalico.org/vppInterfacesSpec: |-
      {
        "eth0": {"rx": 1, "tx": 2, "isl3": true },
        "eth1": {"rx": 5, "tx": 9, "isl3": true }
      }
spec:
  containers:
  - name: samplepod
    command: ["/bin/ash", "-c", "trap : TERM INT; sleep infinity & wait"]
    image: nicolaka/netshoot:latest
